feat: add controllers & auth
