# backend/main.go
@@ -20,9 +20,11 @@ import (
 func main() {
 	// Dependency Injection
 	db := driver.NewDB()
+	tokenDriver := driver.NewTokenDriver()
+
 	postRepo := persistence.NewPostPersistence()
 	helloWorldRepo := persistence.NewHelloWorldPersistence()
-	userRepo := persistence.NewUserPersistence()
+	userRepo := persistence.NewUserPersistence(tokenDriver)
 
 	postUseCase := usecase.NewPostUseCase(postRepo)
 	helloWorldUseCase := usecase.NewHelloWorldUseCase(helloWorldRepo)
@@ -30,7 +32,8 @@ func main() {
 
 	postController := controller.NewPostController(postUseCase)
 	helloWorldController := controller.NewHelloWorldController(helloWorldUseCase)
-	_ = controller.NewUserController(userUseCase)
+	userController := controller.NewUserController(userUseCase)
+	favoriteController := controller.NewFavoriteController()
 
 	// Setup webserver
 	app := gin.Default()
@@ -40,9 +43,25 @@ func main() {
 	app.GET("/", func(ctx *gin.Context) {
 		ctx.String(http.StatusOK, "It works")
 	})
-	app.GET("/hello", handleResponse(helloWorldController.GetHelloWorld))
-	app.GET("/posts", handleResponse(postController.GetPosts))
-	app.GET("/posts/:id", handleResponse(postController.GetPostByID))
+
+	api := app.Group("/api/v1")
+
+	api.GET("/hello", handleResponse(helloWorldController.GetHelloWorld))
+	postRouter := api.Group("/posts")
+	postRouter.Use(middleware.Authentication(userRepo))
+	postRouter.GET("/", handleResponse(postController.GetPosts))
+	postRouter.POST("/", handleResponse(postController.CreatePost))
+	postRouter.GET("/:postId", handleResponse(postController.GetPostByID))
+	postRouter.DELETE("/:postId", handleResponse(postController.DeletePost))
+	postRouter.GET("/:postId/replies", handleResponse(postController.GetReplies))
+	postRouter.POST("/:postId/replies", handleResponse(postController.CreateReply))
+
+	postRouter.POST("/:postId/favorites", handleResponse(favoriteController.CreateFavorite))
+	postRouter.DELETE("/:postId/favorites/:favoriteId", handleResponse(favoriteController.DeleteFavorite))
+
+	api.GET("/users/me", handleResponse(userController.GetMe))
+	api.POST("/sign_up", handleResponse(userController.SignUp))
+	api.POST("/sign_in", handleResponse(userController.SignIn))
 
 	runApp(app, config.Port)
 }
@@ -52,7 +71,7 @@ func runApp(app *gin.Engine, port int) {
 	docs.SwaggerInfo.Description = "training-app-2023-team2"
 	docs.SwaggerInfo.Version = "1.0"
 	docs.SwaggerInfo.Host = fmt.Sprintf("localhost:%d", port)
-	docs.SwaggerInfo.BasePath = "/"
+	docs.SwaggerInfo.BasePath = "/api/v1"
 	docs.SwaggerInfo.Schemes = []string{"http"}
 
 	app.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
